feat(device) detect brand M-Tech model: Ace 9

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22150,9 +22150,13 @@ KINGZONE:
 
 # MTech
 M-Tech:
-  regex: 'EROS 4G(?:[);/ ]|$)'
+  regex: '(?:EROS 4G|MTECH ACE9)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: 'Eros 4G'
+  models:
+    - regex: 'EROS 4G'
+      model: 'Eros 4G'
+    - regex: 'ACE9'
+      model: 'Ace 9'
 
 # Fantec Boogy
 Fantec:
