feat(device) detect new brand Four Mobile models: S600, S300I, S185 Sky 2, K500, S61 Eco 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22252,3 +22252,15 @@ Rivo:
       model: 'Phantom RX$1'
     - regex: 'RHYTHM RX ?([15-9]0|[467]5|[12]80|150|[14]00)(?:[);/ ]|$)'
       model: 'Rhythm RX$1'
+
+# Four Mobile
+Four Mobile:
+  regex: 'Four[ _]?(S600|S300I|S185|K500|S61)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Four[ _]?(S600|S300I|K500)'
+      model: '$1'
+    - regex: 'Four[ _]?S185'
+      model: 'S185 Sky 2'
+    - regex: 'Four[ _]?S61'
+      model: 'S61 Eco 2'
