--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -558,6 +558,12 @@
     name: Binance
     version: 1.39.4
 -
+  user_agent: ru.mail.my/2.8.15 (iOS 14.4; iPhone; Scale/2); mmMobileClient
+  client:
+    type: mobile app
+    name: My World
+    version: 2.8.15
+-
   user_agent: Mozilla/5.0 (Linux; Android 8.1.0; C1 Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/69.0.3497.100 Mobile Safari/537.36 OKAndroid/19.11.26 b577 OkApp
   client:
     type: mobile app
