--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -543,6 +543,11 @@
   name: 'Binance'
   version: '$1'
 
+# My World https://apps.apple.com/app/id598556821
+- regex: 'ru\.mail\.my/(\d+[\.\d]+)'
+  name: 'My World'
+  version: '$1'
+
 # Odnoklassniki https://play.google.com/store/apps/details?id=ru.ok.android https://apps.apple.com/app/id398465290
 - regex: 'OK(?:Android|iOS)/([\d\.]+)'
   name: 'Odnoklassniki'
