--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Mandarin (https://mandarin-browser.com/)
+- regex: 'Mandarin Browser/(\d+[\.\d]+)'
+  name: 'Mandarin'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Maelstrom (https://www.bittorrent.com/)
 - regex: 'Torrent/(\d+[\.\d]+)'
   name: 'Maelstrom'
