Adds detection for Movic F4502

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11034,11 +11034,13 @@ Motorola:
 
 # Movic
 Movic:
-  regex: 'MOVIC'
+  regex: 'MOVIC|F4502'
   device: 'smartphone'
   models:
     - regex: 'MOVIC[ -]W([2345])'
       model: 'W$1'
+    - regex: 'F4502'
+      model: 'F4502'
 
 # MTN
 MTN:
