--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4402,11 +4402,13 @@ Cosmote:
 
 # Cricket
 Cricket:
-  regex: 'Cricket-([a-z0-9]+)|U705AC(?:[);/ ]|$)'
+  regex: 'Cricket-([a-z0-9]+)|(?:U705AC|V350C)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'U705AC'
       model: 'Ovation'
+    - regex: 'V350C'
+      model: 'Influence'
     - regex: 'Cricket-([a-z0-9]+)'
       device: 'feature phone'
       model: '$1'
