Adds detection for Cricket Icon 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4402,9 +4402,11 @@ Cosmote:
 
 # Cricket
 Cricket:
-  regex: 'Cricket-([a-z0-9]+)|(?:U705AC|V350C)(?:[);/ ]|$)'
+  regex: 'Cricket-([a-z0-9]+)|(?:U325AC|U705AC|V350C)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'U325AC'
+      model: 'Icon 2'
     - regex: 'U705AC'
       model: 'Ovation'
     - regex: 'V350C'
