Adds detection for Tecno Mobile Boom J8 and improves general regex for Tecno Mobile

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15435,12 +15435,14 @@ Tecno Mobile:
       model: 'Camon 12 Air'
     - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
       model: 'Spark 4 Air'
+    - regex: 'Tecno[ _-]J8(?:[);/ ]|$)'
+      model: 'Boom J8'
     - regex: 'TECNO S9'
       device: 'phablet'
       model: 'S9'
     - regex: 'Tecno ([^;/]+) Build'
       model: '$1'
-    - regex: 'Tecno[ _]?([a-z0-9_\-]+)'
+    - regex: 'Tecno[ _-]?([a-z0-9_\-]+)'
       model: '$1'
 
 # TechPad
