Adds detection for HiOS operating system and adds detection for Tecno Mobile Camon 16 Premier

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -6,6 +6,13 @@
 ###############
 
 ##########
+# HiOS (https://www.tecno-mobile.com/hios/#/)
+##########
+- regex: 'Tecno[ _-]?(?:CE9)'
+  name: 'HiOS'
+  version: '6.0'
+
+##########
 # GridOS (https://web.archive.org/web/20111123141630/http://fusiongarage.com/grid-os/about)
 ##########
 - regex: 'Grid OS (\d+[\.\d]+)'
