--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2015,3 +2015,10 @@
     short_name: IOS
     version: "14.4"
     platform: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; TECNO CE9) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
+  os:
+    name: HiOS
+    short_name: HOS
+    version: "6.0"
+    platform: ""
