--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15420,6 +15420,8 @@ Tecno Mobile:
       model: 'Camon 12 Air'
     - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
       model: 'Camon 12'
+    - regex: 'Tecno[ _-]CE9(?:[);/ ]|$)'
+      model: 'Camon 16 Premier'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
