--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -8,7 +8,7 @@
 ##########
 # HiOS (https://www.tecno-mobile.com/hios/#/)
 ##########
-- regex: 'Tecno[ _-]?(?:CE9)'
+- regex: 'Tecno[ _-]?(?:CE9h|CE9)(?:[);/ ]|$)'
   name: 'HiOS'
   version: '6.0'
 
