--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -12,6 +12,10 @@
   name: 'HiOS'
   version: '6.0'
 
+- regex: 'Tecno[ _-]?(?:CE8)(?:[);/ ]|$)'
+  name: 'HiOS'
+  version: '7.0'
+
 ##########
 # GridOS (https://web.archive.org/web/20111123141630/http://fusiongarage.com/grid-os/about)
 ##########
