--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15426,6 +15426,8 @@ Tecno Mobile:
       model: 'Camon 16 Premier'
     - regex: 'Tecno[ _-]CE8(?:[);/ ]|$)'
       model: 'Camon 16 Pro'
+    - regex: 'Tecno[ _-]CD6j(?:[);/ ]|$)'
+      model: 'Camon 16 S'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
