Adds detection for Camon 17 and improves OS detection

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15428,6 +15428,8 @@ Tecno Mobile:
       model: 'Camon 16 Pro'
     - regex: 'Tecno[ _-]CD6j(?:[);/ ]|$)'
       model: 'Camon 16 S'
+    - regex: 'Tecno[ _-]CG6(?:[);/ ]|$)'
+      model: 'Camon 17'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
