--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -20,6 +20,10 @@
   name: 'HiOS'
   version: '7.0'
 
+- regex: 'Tecno[ _-]?(?:CG6)(?:[);/ ]|$)'
+  name: 'HiOS'
+  version: '7.6'
+
 ##########
 # GridOS (https://web.archive.org/web/20111123141630/http://fusiongarage.com/grid-os/about)
 ##########
