--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16497,7 +16497,7 @@ Inco:
       model: '$1'
     - regex: 'Plain2 S'
       model: 'Plain 2S'
-    - regex: 'Inco Sphere( 3)(?:[);/ ]|$)'
+    - regex: 'Inco Sphere( 3)?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Sphere$1'
 
@@ -21921,7 +21921,7 @@ Jeka:
 
 # Jiake
 Jiake:
-  regex: '(?:JK-?760)(?:[);/ ]|$)'
+  regex: 'JK-?(760)(?:[);/ ]|$)'
   device: 'smartphone'
   model: 'JK-$1'
 
