--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -8964,8 +8964,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; TECNO CE9) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
   os:
-    name: HiOS
-    version: "6.0"
+    name: Android
+    version: "10"
     platform: ""
   client:
     type: browser
@@ -8982,8 +8982,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; TECNO CE9h) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
   os:
-    name: HiOS
-    version: "6.0"
+    name: Android
+    version: "10"
     platform: ""
   client:
     type: browser
@@ -9000,8 +9000,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; TECNO CE8) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.86 Mobile Safari/537.36
   os:
-    name: HiOS
-    version: "7.0"
+    name: Android
+    version: "10"
     platform: ""
   client:
     type: browser
@@ -9018,8 +9018,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; TECNO CD6j) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
   os:
-    name: HiOS
-    version: "6.2"
+    name: Android
+    version: "10"
     platform: ""
   client:
     type: browser
@@ -9036,8 +9036,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Android 11; TECNO CG6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36
   os:
-    name: HiOS
-    version: "7.6"
+    name: Android
+    version: "11"
     platform: ""
   client:
     type: browser
