feat(device) detect new brand AOYODKG model: A38 feat(device) detect new brand Xtratech model: BRIO X31 feat(device) detect new brand XGIMI feat(device) detect brand Kodak model: Smartway T3 feat(device) detect brand OnePlus model: Nord N10 5G (BE2026) feat(device) detect brand Sky models: Elite C55, Elite B55 feat(device) detect brand Hometech models: ALFA 10MB, ALFA 7LM
issue #6213

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8586,7 +8586,7 @@ Kodak:
       model: 'IM5'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
-    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([MTX]1)'
+    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([MTX]1|T3)'
       model: 'Smartway $1'
     - regex: 'Tablet (7|10)'
       device: 'tablet'
@@ -11805,7 +11805,7 @@ Onda:
 
 # OnePlus
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE2025|BE202[89]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE2117|LE212[03])(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE2117|LE212[03])(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'AC200[13](?:[);/ ]|$)'
@@ -11816,7 +11816,7 @@ OnePlus:
       model: 'Nord N100'
     - regex: 'BE2025(?:[);/ ]|$)'
       model: 'Nord N10'
-    - regex: 'BE2029(?:[);/ ]|$)'
+    - regex: 'BE202[69](?:[);/ ]|$)'
       model: 'Nord N10 5G'
     - regex: 'BE2028(?:[);/ ]|$)'
       model: 'Nord N10 Lite'
@@ -14187,7 +14187,7 @@ Senwa:
 
 # Sky or Sky Devices (skydevices.com)
 Sky:
-  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:5_0T|M45|[45]T|45T|GO|M5Plus|T55|T[46]|[AB]5|5_5_Octa)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|M5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)'
+  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:5_0T|M45|[45]T|45T|GO|M5Plus|T55|T[46]|[AB]5|5_5_Octa|[BC]55)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|M5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)'
   device: 'smartphone'
   models:
     - regex: 'Platinum[_ ](?:5\.0M|M5)'
@@ -14211,7 +14211,7 @@ Sky:
       model: 'Elite 5.5 Octa'
     - regex: 'Elite M5Plus'
       model: 'Elite M5 Plus'
-    - regex: 'Elite[ _](M45|Go|[45]T|T[46]|T55|[AB]5|A55|45T)(?:[);/ ]|$)'
+    - regex: 'Elite[ _](M45|Go|[45]T|T[46]|T55|[AB]5|[ABC]55|45T)(?:[);/ ]|$)'
       model: 'Elite $1'
 
     - regex: 'Elite[_ ]([3-7])[\._]([05](?:[A-Z]{1,2})?\+?)'
@@ -20813,14 +20813,14 @@ eSTAR:
     - regex: 'eSTAR[_ ]MINI[_ ]3G'
       model: 'Mini 3G'
 
-# Hometech
+# Hometech (hometech.com.tr)
 Hometech:
-  regex: '(?:Ideal (?:10S|Tab [79])|ALFA10TB|ALFA[_ ](?:10RC|10TM?|7RS|[78]RC|7M)|HT[ _](?:7RT|8MZ))(?:[);/ ]|$)'
+  regex: '(?:Ideal (?:10S|Tab [79])|ALFA(?:10TB|7LM)|ALFA[_ ](?:10RC|10TM?|10MB|7RS|[78]RC|7M)|HT[ _](?:7RT|8MZ))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(Ideal (?:10S|Tab 9))(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'ALFA[_ ]?(10RC|10T[BM]?|7RS|[78]RC|7M)(?:[);/ ]|$)'
+    - regex: 'ALFA[_ ]?(10RC|10T[BM]?|7RS|[78]RC|7L?M|10MB)(?:[);/ ]|$)'
       model: 'ALFA $1'
     - regex: 'Ideal Tab 7 Ips( 3G)?'
       model: 'Ideal Tab 7 IPS$1'
@@ -22512,3 +22512,23 @@ L-Max:
       model: 'Mega Plus $1'
     - regex: 'Sapphire ?([678])'
       model: 'Sapphire $1'
+
+# AOYODKG
+AOYODKG:
+  regex: 'AOYODKG'
+  device: 'tablet'
+  models:
+    - regex: 'AOYODKG[_ ](A38)(?:[);/ ]|$)'
+      model: '$1'
+
+# Xtratech (xtratech.com)
+Xtratech:
+  regex: '(BRIO[_ ]X31)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# XGIMI (www.xgimi.com)
+XGIMI:
+  regex: 'XGIMI TV(?:[);/ ]|$)'
+  device: 'peripheral'
+  model: '$1'
