feat(device) detect brand Mobicel model: Astro
issue #6067

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10660,7 +10660,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|(?:HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|(?:HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|ASTRO|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -10681,6 +10681,8 @@ Mobicel:
       model: 'Dandy Zam'
     - regex: 'DANDY'
       model: 'Dandy'
+    - regex: 'ASTRO'
+      model: 'Astro'
     - regex: 'VENUS_G'
       model: 'Venus Go'
     - regex: 'TANGO_LITE'
