feat(device) detect new brand Tambo models: TA-2, TA-3, TA-4, TA-20, TA-1,  TA-10, TA-2 3G, TA-2 Pro, TA-40, TA-60, TA-50 Power, TA-55 Power
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22540,3 +22540,9 @@ XGIMI:
   regex: 'XGIMI TV(?:[);/ ]|$)'
   device: 'peripheral'
   model: '$1'
+
+# Tambo
+Tambo:
+  regex: '(TA-(?:2[_ ](?:3G|Pro)|5[05][_ ]Power|[1-4]|[1246]0))(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
