feat(browser) detect browser Tizen Browser for TV or Smartphone
issue #6759

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3391,3 +3391,19 @@
     version: "6"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (SMART-TV; Linux; Tizen 2.4.0) AppleWebKit/538.1 (KHTML, like Gecko) Version/2.4.0 TV Safari/538.1
+  client:
+    type: browser
+    name: Tizen Browser
+    version: 2.4.0
+    engine: WebKit
+    engine_version: "538.1"
+-
+  user_agent: Mozilla/5.0 (SMART-TV; LINUX; Tizen 5.0) AppleWebKit/537.36 (KHTML, like Gecko) Version/5.0 TV Safari/537.36
+  client:
+    type: browser
+    name: Tizen Browser
+    version: "5.0"
+    engine: Blink
+    engine_version: ""
