--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1759,6 +1759,13 @@
 - regex: '(?:Tizen|SLP) Browser(?:/(\d+[\.\d]+))?'
   name: 'Tizen Browser'
   version: '$1'
+- regex: 'Tizen (?:\d+[\.\d]+).+ Version/(\d+[\.\d]+) (?:TV|Mobile)'
+  name: 'Tizen Browser'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+    versions:
+      '4': 'Blink'
 
 #Palm Blazer
 - regex: 'Blazer(?:/(\d+[\.\d]+))?'
