--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -2826,24 +2826,6 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; XGIMI TV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
-  os:
-    name: Android
-    version: 5.1.1
-    platform: ""
-  client:
-    type: browser
-    name: Chrome
-    version: 81.0.4044.138
-    engine: Blink
-    engine_version: ""
-  device:
-    type: peripheral
-    brand: XGIMI
-    model: ""
-  os_family: Android
-  browser_family: Chrome
--
   user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; ASTRO Build/OPM2.171019.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/65.0.3325.109 Mobile Safari/537.36 OPR/35.0.2254.127759
   os:
     name: Android
@@ -3237,5 +3219,23 @@
     type: smartphone
     brand: Tambo
     model: TA-55 Power
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; MAR-LX2B) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.66 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 90.0.4430.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Huawei
+    model: P30 Lite
   os_family: Android
   browser_family: Chrome
