feat(device) detect new brand Mode1 model: Debut (MD-03P)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22656,3 +22656,11 @@ Tambo:
   regex: '(TA-(?:2[_ ](?:3G|Pro)|5[05][_ ]Power|[1-4]|[1246]0))(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# Mode1 (mode1.jp)
+Mode1:
+  regex: 'MD-03P(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'MD-03P'
+      model: 'Debut'
