feat(device) detect new brand Smotreshka models: 115NA, 413NA, 213a, 213 feat(device) detect brand Rombica model: Smart Box v006 feat(device) detect brand Sharp model: Aquos Zeta (SH-H01) feat(device) detect brand Asus model: MeMO Pad FHD 10 LTE feat(device) detect brand Huawei model: MediaPad T5 10 (AGS2-W09HN) feat(device) detect brand NUU Mobile model: M19 (S5501L) feat(device) detect brand Sico model: Mega 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2417,7 +2417,7 @@ Garmin-Asus:
 
 # Asus
 Asus:
-  regex: 'Asus|Transformer|ZenFone Max|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[01])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D'
+  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[01])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -2433,7 +2433,7 @@ Asus:
     - regex: 'ME302C(?:[);/ ]|$)'
       model: 'MeMO Pad FHD 10'
       device: 'tablet'
-    - regex: '(ME302KL|MeMo Pad FHD 10 LTE)(?:[);/ ]|$)'
+    - regex: '(ME302KL|MeMOPad 10FHD LTE|MeMo Pad FHD 10 LTE)(?:[);/ ]|$)'
       model: 'MeMO Pad FHD 10 LTE'
       device: 'tablet'
     - regex: 'ME301T(?:[);/ ]|$)'
@@ -7372,7 +7372,7 @@ Huawei:
     - regex: '(AGS2-AL00|JDN2-W09)HN(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Honor Tab 5'
-    - regex: 'AGS2-(?:[LW]09|W19|L03)(?:[);/ ]|$)'
+    - regex: 'AGS2-(?:[LW]09|W09HN|W19|L03)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'MediaPad T5 10'
     - regex: 'KOB2-[LW]09(?:[);/ ]|$)'
@@ -11514,7 +11514,7 @@ Nomi:
 
 # NUU Mobile
 NUU Mobile:
-  regex: 'NUU_|(?:(?:N(5702|5001)L|S6001L)|A6L-[CG])(?:[);/ ]|$)'
+  regex: 'NUU_|(?:(?:N(5702|5001)L|S6001L|S5501L)|A6L-[CG])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'NUU_A([13])'
@@ -11525,6 +11525,8 @@ NUU Mobile:
       model: 'X5'
     - regex: 'S6001L'
       model: 'G2'
+    - regex: 'S5501L'
+      model: 'M19'
     - regex: 'N5702L'
       model: 'G3'
     - regex: '(N5001L|A6L-[CG])(?:[);/ ]|$)'
@@ -12853,7 +12855,7 @@ Rombica:
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
-    - regex: '(Infinity K8|Smart Box (?:v00[345789]|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
+    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
       model: '$1'
 
 # Rover
@@ -21354,13 +21356,15 @@ Sansui:
 
 # Sico (sico.com.eg)
 Sico:
-  regex: 'SICO[_ ](?:PLUS|e1002)|Express3-Max|SSR3-1-51-5M|SSD-1-53-13M'
+  regex: 'SICO[_ ](?:PLUS|e1002)|(?:Express3-Max|SSR3-1-51-5M|SSD-1-53-13M|Mega2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'SICO[_ ]PLUS2'
       model: 'Plus 2'
     - regex: 'SICO[_ ]PLUS'
       model: 'Plus'
+    - regex: 'Mega2'
+      model: 'Mega 2'
     - regex: 'SSR3-1-51-5M'
       model: 'Pro 3'
     - regex: 'SSD-1-53-13M'
@@ -22685,4 +22689,10 @@ Raspberry:
 Tambo:
   regex: '(TA-(?:2[_ ](?:3G|Pro)|5[05][_ ]Power|[1-4]|[1246]0))(?:[);/ ]|$)'
   device: 'smartphone'
+  model: '$1'
+
+# Smotreshka
+Smotreshka:
+  regex: 'Smotreshka Box (115NA|413NA|213a?)(?:[);/ ]|$)'
+  device: 'tv'
   model: '$1'
